# dyad-backend

./: .env.dev  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: settings.py
code/: db.sqlite3  dyad_uwsgi.ini
code/api/: models.py  serializers.py  urls.py  views.py
code/api/migrations/: 0001_initial.py  0002_post_group_key.py  0003_remove_post_group_key.py  0004_post_group_key.py  0005_alter_post_image.py
code/app/: asgi.py  settings.py  urls.py
code/chat/: admin.py  consumers.py  models.py  urls.py  views.py
code/chat/api/: serializers.py  urls.py  views.py
code/chat/migrations/: 0001_initial.py
code/chat/templates/chat/: room.html
code/core/: __init__.py  admin.py  celery.py  forms.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
code/core/management/commands/: wait_for_db.py
code/core/migrations/: 0001_initial.py  0002_alter_dyaduser_phone_number.py  0003_auto_20211205_1104.py  0004_auto_20211205_2042.py  0005_dyadgroup.py  0006_dyaduser_dyad_group.py  0007_alter_dyaduser_dyad_group.py  0008_remove_dyaduser_dyad_group.py  0009_delete_dyadgroup.py  0010_dyadgroup.py  0011_auto_20211206_0236.py  0012_dyaduser_last_active.py
code/data/: serializers.py  services.py  urls.py  views.py
code/image_server/: forms.py  models.py  serializers.py  urls.py  views.py
code/image_server/migrations/: 0001_initial.py
code/image_server/templates/: imageform.html
code/images/: admin.py  forms.py  models.py  serializer.py  urls.py  views.py
code/images/migrations/: 0001_initial.py
usercontent-servicer/: CMakeLists.txt  Dockerfile  Dockerfile-data
usercontent-servicer/grpc-server/: CMakeLists.txt  cmake_install.cmake  database_helper.hpp  database_test  database_test.cpp  database_test.py  flush_db.py  grpc_data_client.cpp  grpc_data_server.cpp  grpc_data_server.py  image.grpc.pb.cc  image.grpc.pb.h  image.pb.cc  image.pb.h
usercontent-servicer/grpc-server/gens/: content_pb2.py  count_pb2.py  count_pb2_grpc.py  posts_pb2.py  posts_pb2_grpc.py
usercontent-servicer/grpc-server/protos/: content.proto  count.proto  image.proto  posts.proto
usercontent-servicer/protos/: image.proto
